--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -19,7 +19,7 @@ B=
 5	&	3	&	2
 \end{bmatrix}.
 \end{align*}
-Ud fra definition \ref{defn:mxtrans} haves
+Jævnfør definition \ref{defn:mxtrans} haves
 \begin{align*}
 A^T =
 \begin{bmatrix}
