--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,6 +1,8 @@
 \chapter{Lineær algebra}
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
+	\input{incl/main/linear_algebra/matricer_vektorer/specmatricer.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxsum.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxtrans.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
+
