Update gauss_elimination.tex and span.tex

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -155,7 +155,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 således $\text{rang}(A)=3$ og $\text{null}(A)=3$. 
 %
 % Hvilket er heldigt når der er 6 søjler
-\begin{thm}{Konsistens}{konsitens}
+\begin{thm}{Konsistens}{konsistens}
 Følgende udsagn er ækvivalente:
 \begin{enumerate}
 \item Matricen $A\mathbf{x}=\mathbf{b}$ er \textbf{konsistent}.
@@ -172,7 +172,7 @@ $$    \mathbf{v} = \begin{bmatrix}
         \vdots \\
         v_{n} 
         \end{bmatrix} $$
-i $\R^n$, der opfylder, at $A\mathbf{v}=\mathbf{b}$, hvis og kun hvis $$v_1 \mathbf{a_1}+v_2 \mathbf{a_2} + \ldots + v_n \mathbf{a_n}$$ hvilket er linearkombinationen af matricen og vektoren. 
+i $\R^n$, der opfylder, at $A\mathbf{v}=\mathbf{b}$, hvis og kun hvis $$v_1 \mathbf{a}_1+v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n$$ hvilket er linearkombinationen af matricen og vektoren. 
 Det følger derfor at udsagn $(1)$ og udsagn $(2)$ er ækvivalente.
 Herefter bevises at $(1)$ og $(3)$ er ækvivalente. 
 Hvis udsagn $(3)$ er falsk følger det at  $$0 x_1+0 x_2 + \ldots + 0x_n =d$$ hvor $d\neq0$, da dette ikke har nogen løsning følger det, at ligningssystemet således bliver inkonsistent. 
