--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -72,46 +72,17 @@ $$
 
 \end{eks}
 
-Bemærk, at enhver vektor 
+Enhver vektor 
 $
 \textbf{a}=
 \begin{bmatrix}
 a_1 & a_2 & \ldots & a_n
 \end{bmatrix}^T
 $
-i $\R^n$kan skrives som linearkombination af standardvektorerne i $R^n$. 
-Standardvektorerne i $R^n$ er 
+i $\R^n$kan skrives som linearkombination af $I_n$ i $R^n$.
 
-$$
-\textbf{e}_1=
-\begin{bmatrix}
-1 \\ 
-0 \\ 
-\vdots \\
-0
-\end{bmatrix}
-\text{, }
-\textbf{e}_2=
-\begin{bmatrix}
-0 \\ 
-1 \\ 
-\vdots \\
-0
-\end{bmatrix}
-\text{, }
-\ldots
-\text{, }
-\textbf{e}_n=
-\begin{bmatrix}
-0 \\ 
-0 \\ 
-\vdots \\
-1
-\end{bmatrix}
-\text{. }
-$$
 
-Givet skalarerne er vektorer, så er der tale om et \textit{matrix-vektorprodukt}.
+Givet skalarerne i en linearkombination er vektorer, så er der tale om et \textit{matrix-vektorprodukt}.
 
 \begin{defn}{}{mvp}
 \phantom{gdfs}\\Lad $A$ være en $m \times n$ matrix og \textbf{v} være en $n \times 1$ vektor. \textbf{Matrix-vektor-produktet} af A og \textbf{v} defineres som den lineære kombination af søjlerne i A hvis koefficienter er de tilsvarende komponenter af \textbf{v}, og noteres A\textbf{v}. Det vil sige
