--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -3,11 +3,14 @@
 Spandet er den del af vektorrummet en given mængde vektorer dækker over. 
 %
 \begin{defn}{}{}
+%
 For en ikke-tom mængde vektorer $\S = {\mathbf{u}_1,\mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k }$ i $\R^n$ er spannet af $\S$ som mængden af alle linear kombinationer af $\mathbf{u}_1,\mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k$ i $\R^n$. 
 Denne mængde noteres $\text{span} \{ \S \}$ eller $\text{span}\{ \mathbf{u}_1,\mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k \}$.
+%
 \end{defn}
 %
 \begin{eks}
+%
 Givet mængderne af vektorer $\S_1$ og $\S_2$ kan $\text{span}\{\S_1 \}$ og $\text{span}\{\S_2 \}$ findes.
 %
 \begin{align*}
@@ -60,7 +63,8 @@ Spannet for $\S_1$ bliver derfor:
 \right\}.
 \end{align*}
 %
-Som det fremgår geometrisk på figur \ref{span_eks} er $\text{span}\{\S_1 \}$ en ret linje. Eftersom $\mathbf{u}_2$ er en mulig lineær kombination af $\mathbf{u}_1$ kan dette reduceres til  
+Som det fremgår geometrisk på figur \ref{span_eks} er $\text{span}\{\S_1 \}$ en ret linje. 
+Eftersom $\mathbf{u}_2$ er en mulig lineær kombination af $\mathbf{u}_1$ kan dette reduceres til  
 %
 \begin{align*}
 \text{span}\{\S_1 \} =
@@ -72,7 +76,8 @@ Som det fremgår geometrisk på figur \ref{span_eks} er $\text{span}\{\S_1 \}$ e
 \right\}.
 \end{align*}
 %
-Mængden $\S_2$ kan derfor reduceres til $\S_2=\{ \mathbf{u}_1, \mathbf{u}_2 \}$. Spannet for $\S_2$ er derfor
+Mængden $\S_2$ kan derfor reduceres til $\S_2=\{ \mathbf{u}_1, \mathbf{u}_2 \}$. 
+Spannet for $\S_2$ er derfor
 %
 \begin{align*}
 \text{span}\{\S_2 \} = 
@@ -162,6 +167,7 @@ A=\begin{blockarray}{ccccc}
 \end{block}
 \end{blockarray} 
 \end{align*}
+%
 \begin{align*}
 \xrightarrow[R_3 \rightarrow R_3-R_1]{R_2 \rightarrow R_2-2R_1}
 \begin{blockarray}{ccccc}
@@ -173,6 +179,7 @@ A=\begin{blockarray}{ccccc}
 \end{block}
 \end{blockarray} 
 \end{align*}
+%
 \begin{align*}
 \xrightarrow{R_3 \rightarrow R_3-R_2}
 \begin{blockarray}{ccccc}
@@ -254,7 +261,6 @@ Det følger derfor, jævnfør sætning \ref{thm:konsistens}, at $A\mathbf{x}=\ma
 %
 tekst 
 %
-
 \begin{thm}{}{}
 %
 Lad $\S =  \{\mathbf{u}_1,\mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k \}$ være en mængde vektorer i $\R^n$, og lad $\mathbf{v}$ være en vektor i $\R^n$.
@@ -285,35 +291,3 @@ da mængerne ikke er ækvivalente, idet kun en af dem indeholder $\mathbf{v}$.
 %
 tekst 
 %
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
