Update mxsum.tex and cmds.tex

--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -28,7 +28,7 @@
 %\newtheorem{defn}[thm]{Definition} % Definitioner, nummereret ligesom sætninger
 \newcounter{example}[chapter]
 \def\theexample{\thechapter.\arabic{example}}
-\newenvironment{eks}{\phantom{.}\newline\noindent\refstepcounter{example}\textbf{Example~\theexample}\phantom{.}\newline\noindent\textcolor{myblue!25}{\rule{\textwidth}{1pt}}}
+\newenvironment{eks}{\phantom{.}\newline\noindent\refstepcounter{example}\textbf{Eksempel~\theexample}\phantom{.}\newline\noindent\textcolor{myblue!25}{\rule{\textwidth}{1pt}}}
 {\phantom{.}\newline\textcolor{myblue!25}{\rule{\textwidth}{1pt}}\bigskip}  
 
 \newcounter{proof}[chapter]
