--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -77,10 +77,13 @@ Så har matricerne følgende egenskaber:
 \begin{proof}
 Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
 Betragt både $A + B$ og $B + A$ og se, jævnfør \ref{defn:mxsum}, at de $(i,j)$'te indgange bliver henholdsvis $a_{i,j} + b_{i,j}$ og $b_{i,j} + a_{i,j}$, hvilket beviser (a).
-Ligeledes ses det, at $(a_{i,j} + b_{i,j}) + c_{i,j} = a_{i,j} + (b_{i,j} + c_{i,j})$, hvilket beviser (b).
-Endvidere kan der isoleres for null i $a_{i,j} + 0 = a_{i,j}$ for at få $a_{i,j} + (-a_{i,j}) = 0$, hvilket beviser (c) og (d).
+Ligeledes kan ses det, at $(a_{i,j} + b_{i,j}) + c_{i,j} = a_{i,j} + (b_{i,j} + c_{i,j})$, hvilket beviser (b).
+Endvidere kan der isoleres for null i $a_{i,j} + 0 = a_{i,j}$ for at få $a_{i,j} + (-a_{i,j}) = 0$, hvilket beviser (c) og (d), da alle indgange i en null matrix er $0$.
 
-
+Betragt skalarproduktet til $A$ med skalaren $ks$, som er et produkt af skalarene $k$ og $s$, og skalarproduktet til $A$ med $k$ og så $s$.
+For indgangene i disse skalarprodukter findes ligheden $(ks)a_{i,j} = s(ka_{i,j})$, hvilket beviser (e).
+Ligeledes betragtes indgangene for begge sider af ligheden i (f) og det ses, at $k(a_{i,j} + b_{i,j}) = ka_{i,j} + kb_{i,j}$, hvilket beviser (f).
+Det samme gøres for ligheden i (g) og ligheden $(k + s)a_{i,j} = ka_{i,j} + sa_{i,j}$ opstilles, hvilket beviser (g) og afslutter beviset.
 \end{proof}
 
 Da vektorer er matricer med enten én række eller én søjle er samme operationer mulige og opfylder samme egenskaber.
