--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -5,4 +5,6 @@
 	\input{incl/main/linear_algebra/matricer_vektorer/mxsum.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxtrans.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
+	\input{incl/main/linear_algebra/matricer_vektorer/mxmulti.tex}
+	
 
