--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -1,17 +1,17 @@
 \subsection{Specielle matricer} %skal måske hedde noget andet? 
 
-Den ene af to specielle matricer, der benyttes i dette projekt, er \textit{nulmatricen}. I en nulmatrice er alle elementer $0$, og en $m \times n$ nulmatrice noteres $0_{m,n}$. 
+To specielle matricer er nødvendige at introducere, da de benyttes i nærværende projekt. Den første er \textit{nulmatricen}. I en nulmatrice er alle elementer $0$, og en $m \times n$ nulmatrice noteres $0_{m,n}$. 
 %Er det korrekt notation? Fandt det på wiki hehehehe
 
 Den anden specielle matrice er \textit{identitetsmatricen}. 
 
 \begin{defn}{}{}
-En $n \times n$, $n \in \Z^+$, identitetsmatrice $I_n$ består af alle standardvektorer $\textbf{e}_1, textbf{e}_2, \ldots, textbf{e}_n$ i $R^n$, således 
+En $n \times n$, $n \in \Z^+$, identitetsmatrice $I_n$ består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $R^n$, således 
 
 $
 I_n=
 \begin{bmatrix}
-\textbf{e}_1 & textbf{e}_2 & \ldots & textbf{e}_n
+\textbf{e}_1 & \textbf{e}_2 & \ldots & \textbf{e}_n
 \end{bmatrix}
 $. 
 
