--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -9,7 +9,7 @@ I forbindelse med løsning af lineære ligningssystemer og optimeringsproblemer 
 En matrix er en rektangulær tabel, hvis elementer er \textit{skalarer}, der er $k \in \R$. 
 En matrix med $m$ rækker og $n$ søjler har størrelsen $m \times n$.
 Hvis $m=n$, er matricen kvadratisk. 
-Elementet $a_{i,j}$ i $i'te$ række og $j'te$ søjle kaldes $(i,j)-indgangen$ i matricen. 
+Elementet $a_{i,j}$ i $i'te$ række og $j'te$ søjle kaldes $(i,j)$-indgangen i matricen. 
 \end{defn}
 
 %HVORFOR DUR REFERENCER IKKE HVAD FUCK HJÆLP FOR SATAN
